<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/layout_border_popup"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/add_edit_text_view"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/add_player_button"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_border_button"
            android:text="@string/close_button"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/surname_text_view"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/surname_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/surname_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_of_birth_text_view"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date_of_birth_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/pick_date_text_view"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:text="@string/pick_date_text_view"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/polish_ranking_text_view"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/polish_ranking_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/polish_ranking_number"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/international_ranking_text_view"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/international_ranking_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />


        <EditText
            android:id="@+id/international_ranking_number"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center">

        <Button
            android:id="@+id/confirm_new_player_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/layout_border_button"
            android:gravity="center"
            android:text="@string/confirm_new_player_button"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>