<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp">


        <TextView
            android:id="@+id/current_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/current_results"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/header_results_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_text_view"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:text="@string/position_text_view"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/white_player_text_view"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:text="@string/player_name_text_view"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/results_text_view"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:text="@string/scored_points_text_view"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

        </LinearLayout>


        <include
            layout="@layout/matches_layout"
            android:layout_width="match_parent"
            android:layout_height="500dp" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/titleMenuStyle"
        app:menu="@menu/menu_tournament">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>